--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ img  {
 html {
       background-color: #FFD
     }
-    p {
+   h2+p {
       border-radius: 25px;
       border: 1px solid #888;
       padding-left: 15px;
@@ -48,8 +48,18 @@ footer  {
 <img src="http://i.picresize.com/images/2013/07/31/tjMNn.png" alt="Logo" align="left">
 <h1>University College University of Borrovia University</h1>
 <h2>Welcome to UCUBU!</h2>
-<p>We are a university with a long history of not being hacked. We make ourselves proud with our impenetrable web defenses and powerful encryption services.</p>
-<img src="http://image.shutterstock.com/display_pic_with_logo/76219/116432626/stock-photo-students-working-in-computer-class-wearing-headphones-in-college-116432626.jpg" alt="UCUBU" align="right">
+<p>We are a university with a long history of not being hacked. We make ourselves proud with our impenetrable 
+web defenses and powerful encryption services.</p>
+<br>
+<p>This is the best University that has educated and made
+successfull students in the Cybersecurity field. Our
+team can stop the best hackers in Borrovia. All of our
+students graduate from this college with a successfull
+career.This college is very expensive and will not
+tolerate lazy students, if you think you will not get in
+then don't even try. </p>
+<img src="http://image.shutterstock.com/display_pic_with_logo/76219/116432626/stock-photo-students-working-in-
+computer-class-wearing-headphones-in-college-116432626.jpg" alt="UCUBU" align="right">
 <nav>
 <ul>
   <li><a href="about.html">About Us</a></li>
